--- a/src/index.css
+++ b/src/index.css
@@ -63,3 +63,26 @@ body {
   margin: 20px;
   text-align: center;
 }
+
+.book-form {
+  padding: 20px;
+}
+
+.book-form__input {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  margin: 6px 0;
+  background: #3c1f3c;
+  color: #fff;
+  border: 0; 
+}
+
+.book-form__submit {
+  margin: 10px auto;
+  background: #eee;
+  border: 0;
+  padding: 6px 20px;
+  display: block;
+  cursor: pointer;
+}
